--- a/src/index.scss
+++ b/src/index.scss
@@ -6,7 +6,7 @@
 
 body { 
     background: #d8d8d8;
-    //background-image: linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
+    background-image: linear-gradient(120deg, #a1c4fd 0%, #c2e9fb 100%); //linear-gradient(120deg, #89f7fe 0%, #66a6ff 100%);
     margin: 0; 
     font-family: Arial, Helvetica, sans-serif;
     height: 100vh;
